<resources>
    <string name="app_name">HotelManagementAndroid</string>
    <string name="hotel_management">Hotel Management</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_key">Enter Key</string>
    <string name="hotel_management_caps">HOTEL MANAGEMENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_out">Sign Out</string>
</resources>