<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hotel_management"
        android:textColor="#9A52C1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameRegisterEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailAddressRegisterEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressRegisterEditText" />

    <EditText
        android:id="@+id/keyRegisterEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_key"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditText" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:onClick="registerButtonClicked"
        android:text="@string/register"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyRegisterEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>